BUGFIX - TitlePanel title was not aligning to left

--- a/CruxThemes/src/br/com/sysmap/crux/themes/widgets/standard/public/crux/widgets/standard/css/widgets-style.css
+++ b/CruxThemes/src/br/com/sysmap/crux/themes/widgets/standard/public/crux/widgets/standard/css/widgets-style.css
@@ -744,17 +744,20 @@
 .crux-TitlePanel .bottomLeftCell
 {
 	font-size: 0px;
+	font-family: monospace;
 	height:5px;
 	background: url(../img/title-panel-blue.gif) no-repeat bottom left;
 }
 .crux-TitlePanel .bottomCenterCell
 {
 	font-size: 0px;
+	font-family: monospace;
 	background: url(../img/title-panel-blue.gif) no-repeat bottom center;
 }
 .crux-TitlePanel .bottomRightCell
 {
 	font-size: 0px;
+	font-family: monospace;
 	background: url(../img/title-panel-blue.gif) no-repeat bottom right;
 }
 
